# hrm

./: Cargo.toml  README.md
implementation/: Cargo.toml
implementation/DOCUMENTS/: hyperparameters.md  key_terms.md
implementation/src/: constants.rs  hrm.rs  lib.rs  parameter.rs  parameter.rs.md  utility.rs
lib/: PULL.cmd
src/: main.rs
